# CppAutoRegisterDemo

./: CMakeLists.txt  README.md  component_a.cpp  component_a.h  component_b.cpp  component_b.h  factory.cpp  factory.h  main.cpp
